--- a/react-typescript/public/index.html
+++ b/react-typescript/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<script src="%PUBLIC_URL%/datafeeds/udf/dist/bundle.js"></script>
+		<!-- <script src="%PUBLIC_URL%/datafeeds/udf/dist/bundle.js"></script> -->
+		<script src="https://charting-library.tradingview-widget.com/datafeeds/udf/dist/bundle.js"></script>
 		<title>Charting Library React Demo</title>
 	</head>
 	<body>
